<resources>
    <string name="app_name">ShopList</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_fragment_productlist_add">Add product</string>
    <string name="productlist_dialog_typeproduct">Type product</string>
    <string name="productlist_dialog_barcode">Add product from barcode</string>
    <string name="fragment_barcodecamera_notavailable">Barcode detecting is not available</string>
    <string name="menu_fragment_productlist_restore">Restore product</string>
    <string name="menu_fragment_productlist_restoreall">Restore all products</string>
    <string name="activity_productlist_noproductstorestore">No products to restore</string>
    <string name="menu_fragment_productlist_save">Save product list</string>
    <string name="activity_productlist_context_search">Search in shops</string>
    <string name="item_shoplist_button">Add</string>
    <string name="product_list_dialog_shop">Add product from Shop</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="context_menu_productlist_change">Change</string>
    <string name="context_menu_productlist_delete">Delete</string>
    <string name="activity_login_e_mail">E-mail</string>
    <string name="activity_login_password">Password</string>
    <string name="drawer_register">Register</string>
    <string name="activity_register_register">Register</string>
    <string name="activity_login_emailfail">Email is not correct</string>
    <string name="activity_login_confirm">Confirm Password</string>
    <string name="activity_login_passwordfail">Passwords are not matches</string>
    <string name="activity_login_firebasefail">Some error happens</string>
    <string name="drawer_authorize">Authorize</string>
    <string name="context_menu_productlist_save">Send</string>
    <string name="activity_main_send_title">Enter a receiver\'s email</string>
    <string name="edit">Edit</string>
    <string name="item_product_dialog_name">Name</string>
    <string name="item_product_dialog_description">Description</string>
    <string name="item_product_dialog_price">Price</string>
    <string name="item_product_dialog_quantity">Quantity</string>
    <string name="error_default">Some error happens</string>
    <string name="activity_productlist_dialog_savechanges">Do you want to save your changes?</string>
    <string name="save">Save</string>
    <string name="activity_splash_login">Login</string>
    <string name="activity_splash_register">Register</string>
    <string name="log_out">Log out</string>
    <string name="activity_productlist_context_delete">Delete</string>
</resources>
