<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/item_product_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_product_dialog_name"
            android:inputType="textAutoComplete"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/item_product_dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_product_dialog_description"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/item_product_dialog_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_product_dialog_price"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/item_product_dialog_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_product_dialog_quantity"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>